# spotvsperp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  requirements.txt
config/: base.yaml  development.yaml  production.yaml
examples/: bybit_market_feed.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
grafana/dashboards/: basis_funding.json  execution.json  risk.json
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml
nginx/: nginx.conf
src/: main.py
src/api/: manager.py  serializers.py  ws_server.py
src/backtest/: engine.py  execution.py  metrics.py  models.py  monte_carlo.py  simulator.py
src/basis/: engine.py  history.py  models.py
src/core/: app.py  bus.py  config.py  container.py  logging_setup.py
src/exchange/: base.py  orderbook.py
src/execution/: base.py  bybit_executor.py  hedge_engine.py  order_tracker.py
src/funding/: engine.py  history.py  models.py
src/liquidation/: engine.py  history.py  models.py
src/models/: execution.py  funding.py  liquidation.py  market.py  orders.py  positions.py
src/monitoring/: collector.py  exporter.py  manager.py  metrics.py
src/risk/: delta_tracker.py  engine.py  models.py
src/secrets/: vault.py
src/storage/: manager.py  postgres.py  redis_client.py  repositories.py  schema.sql  writer.py
tests/: conftest.py
(+52 files in other folders)
