[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cexvscex"
version = "0.1.0"
description = "Institutional-grade crypto basis trading terminal"
requires-python = ">=3.12"
dependencies = [
    "msgspec>=0.18.6",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "aiohttp>=3.9.5",
    "websockets>=12.0",
    "orjson>=3.10.5",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.7",
    "prometheus-client>=0.20.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "uvloop>=0.19.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:pytest_ethereum"

[tool.hatch.build.targets.wheel]
packages = ["src"]
